@@ -47,6 +47,19 @@ testBool(void)
 	ASSERT((E ? 1 : 0) == (!(!E)));
 	ASSERT((E += 2) == 1);
 	ASSERT((--E, --E, E) == E);
+
+	E = 0;   ASSERT(!E); // sets E to 0
+	E = 1;   ASSERT(E);  // sets E to 1
+	E = 4;   ASSERT(E);  // sets E to 1
+	E = 0.5; ASSERT(E);  // sets E to 1
+	E = false;
+	E++;     ASSERT(E);  // sets E to 1
+	E = true;
+	E++;     ASSERT(E);  // sets E to 1
+	E = false;
+	E--;     ASSERT(E); // sets E to 1-E
+	E = true;
+	E--;     ASSERT(!E); // sets E to 1-E
 }
 
 #else
